fixed pfp align?

--- a/style.css
+++ b/style.css
@@ -184,7 +184,11 @@ h2 {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center center;
     border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .profile-image::before {
